# twitter-ner-investigation

./: README.md  dataframe_utils.py  hugging.py  io_utils.py  ner_utils.py  parsing_utils.py  pyproject.toml  tweets_no_geo.xlsx  twitter_integration_places_collection.json
Data/: twitter_integration_twitter_collection(1).json
Results/: Resultados.txt  tweets_no_geo_targeted.xlsx
